_sass/_layout.scss
//$navbar-box-shadow-color: transparent;
// Bulma
@import "../node_modules/bulma/bulma.sass";
// Extensions
@import "../node_modules/bulma-block-list/src/block-list.scss";
@import "../node_modules/@creativebulma/bulma-tooltip/src/sass/index.sass";
// Bulma Config
$column-gap: 16px;
$modal-content-width: 800px;
$tabs-link-active-color: $primary;
$tabs-link-active-border-bottom-color: $primary;
// Global
//:root {
//  font-size: 24px;
//  line-height: 1.5rem;
//}
html {
  scroll-behavior: smooth;
  font-size: 24px;
  line-height: 1.5rem;
}
h1,
h2,
h3,
p {
  padding-bottom: 30px;
}
h1,
h2 {
  padding-top: 90px;
}

h1,
h1 p {
  font-size: 2rem;
  line-height: 3rem;
  font-weight: 600;
  text-align: center;
}
.turquoise {
  color: $primary-dark;
}
h2,
h2 p {
  @extend h1;
  font-weight: 400;
}
h3,
h3 p {
  @extend h2;
  text-align: left;
}

// Should be replaced
.green h1,
.green h1 p {
  text-align: left;
}



h3 {
  font-weight: 600;
  font-size: 1.7rem;
  padding-top: 50px;
}

h4 {
  font-size: 1rem;
}

h5 {
  font-size: 0.83rem;
  text-align: center;
  text-transform: uppercase;
}
ul {
  list-style-type: disc;
  padding-left: 1em;
}
a:link {
  color: #1E7D73;
}

a:visited {
  color: #1E7D73;
}

a:hover {
  color: #77B9A5;
}

a:active {
  color: #1E7D73;
}
.card h1,
.card h2,
.card p,
.slider h1,
.slider h2,
.slider p {
  padding-top: 0;
  padding-bottom: 0;
}
// Button Animation + Gleiche Breite
.button {
  // Schrifft
  font-size: 0.667rem !important;
  font-weight: 600;
  // Animation
  transition-timing-function: cubic-bezier(0.25, 0.46, 0.45, 0.94);
  transition-property: background-color, transform;
  transition-duration: 0.3s;
  -webkit-transition-timing-function: cubic-bezier(0.25, 0.46, 0.45, 0.94);
  -webkit-transition-property: background-color, transform;
  -webkit-transition-duration: 0.3s;
  -o-transition-timing-function: cubic-bezier(0.25, 0.46, 0.45, 0.94);
  -o-transition-property: background-color, transform;
  -o-transition-duration: 0.3s;
  -moz-transition-timing-function: cubic-bezier(0.25, 0.46, 0.45, 0.94);
  -moz-transition-property: background-color, transform;
  -moz-transition-duration: 0.3s;
}

.button a,
.button span {
  // Schrifft
  font-size: 16px !important;
  font-weight: 600;
}

.navbar-menu .button,
.navbar-dropdown .button {
  // Buttongröße aus Figma
  width: 180px;
  height: 47px;
}
.navbar-item.has-no-dropdown {
  padding: 0;
}
.navbar.is-primary .navbar-item.has-no-dropdown .navbar-link:hover,
.navbar.is-primary .navbar-item.has-no-dropdown .navbar-link.is-active {
  background-color: transparent;
  color: #fff;
}

// z.B. "Mehr über Intia" Button
.button.is-dark:hover,
.button.is-dark.is-hovered {
  border-width: 1px;
  background-color: $dark;
  border-color: transparent;
  color: white;
}
@include desktop {
  .navbar-menu .button.is-dark:hover.has-dropdown,
  .navbar-menu .button.is-dark.is-hovered.has-dropdown {
    background-color: $primary-dark;
  }
}
.is-active-header {
  background-color: $dark !important;
}
@include mobile {
  .is-active-header {
    background-color: transparent !important;
  }
}
// Dropdownmenüelemente
.navbar-dropdown,
.navbar-item:focus,
.navbar-dropdown a.navbar-item:focus,
.navbar-dropdown a.navbar-item:hover {
  background-color: $dark;
  border-width: 2px;
  color: white;
}
.navbar.is-primary .navbar-start .navbar-item:hover .navbar-link::after,
.navbar.is-primary .navbar-end .navbar-item:hover .navbar-link::after {
  transform: rotate(135deg);
  margin-top: 0;
}

// Dropdownmenühintergrund und Rand
.navbar-dropdown {
  border-top: transparent;
  background-color: transparent;
}

// Navbar Padding
.navbar-end.buttons {
  padding-left: 0px;
  padding-top: 15px;
  font-weight: bold;
}
// Logo Padding
.navbar-item {
  //padding-top: 21px;
}
.navbar-dropdown {
  display: none;
}
// Search 
.navbar-search{
  padding: 0px !important;
  height: 47px;
  margin-bottom: 12px;
}
.navbar-search .icon {
  height: 32px;
  width: 32px;
  vertical-align : middle;
}
//Search overlay
.searchbar .field{
  margin-bottom: 0;
}
.searchbar-overlay{
  display: none;
}
.searchbar{
  height: 47px;
  width: 800px;
  padding-top: 0 !important;
}
.search-item {
  color: black;
}
.searchbar-overlay ul{
  list-style-type: none;
}
.search-result-list {
  display: none;
  background-color: #e7f2ea;
  color: black;
  border-bottom-left-radius: 45px;
  border-bottom-right-radius: 45px;
  border-left: 3px solid #1e7d73;
  border-right: 3px solid #1e7d73;
  border-bottom: 3px solid #1e7d73;
}
.search-input:active, .search-input:hover{
  border-color: #1e7d73 !important ;
}

.button.is-dark.has-dropdown:hover .navbar-dropdown,
.button.is-dark.is-hovered.has-dropdown .navbar-dropdown {
  display: block;
}

.footer {
  background-color: $primary-dark;
  color: white;
}

.link {
  color: $primary;
}

.footer .link {
  color: white;
}

.is-outlined {
  border-width: 2px;
  border-color: $primary-dark;
}

div.highlight {
  margin-bottom: 1rem;
}

@include desktop {
  .navbar-item {
    border-width: 2px;
    display: block;
    &.is-hoverable:hover {
      border-width: 2px;
      .navbar-dropdown {
        display: block;
      }
    }
  }
}

// Duno
.contents {
  box-shadow: $box-shadow;
  padding: 1.5rem;
  margin-bottom: 3rem;
}

.content {
  figure {
    margin: 0;
  }
}

.callout {
  &-icon {
    width: 4rem;
    height: 4rem;
    margin-bottom: 0.75rem;
  }
}

.sticky {
  position: sticky;
  top: 30px;
}

.green {
  width: 100%;
  background-color: $light;
  padding-left: 5%;
  padding-right: 5%;
  padding-top: 6rem;
  padding-bottom: 8rem;
  overflow: hidden;
}

.overtitle {
  margin-bottom: 0 !important;
  padding-bottom: 0 !important;
  text-transform: uppercase;
  letter-spacing: 0.3rem;
}
.title-with-overtitle {
  margin-top: 0 !important;
  padding-top: 0.25em !important;
}
// Globals
img.is-rounded {
  border-radius: 65px;
}
.hidden {
  display: none;
}
/* ... */

